[project]
name = "niceguitest"
version = "0.1.0"
description = "Test for entry points and optional dependencies for nicegui"
readme = "README.md"
authors = [
    { name = "Carsten Engelke", email = "carsten.engelke@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
niceguitest = "niceguitest.cli:main"
niceguitest-gui = "niceguitest.gui_launcher:main"

[project.optional-dependencies]
gui = [
    "nicegui>=3.10.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
